--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "leafo/lessphp": ">=0.5.0"
-        "leafo/scssphp": ">=0.7.5"
+        "leafo/lessphp": ">=0.5.0",
+        "leafo/scssphp": ">=0.7.5",
         "matthiasmullie/minify": ">=1.3.59"
     },
     "autoload": {
