--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,11 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0",
+        "php": ">=7.0.0",
         "leafo/lessphp": ">=0.5.0",
         "leafo/scssphp": ">=0.7.5",
-        "matthiasmullie/minify": ">=1.3.59"
+        "matthiasmullie/minify": ">=1.3.59",
+        "reb/babel": ">=1.0.0"
     },
     "autoload": {
         "psr-4": {"WebCollector\\": "src/WebCollector"}
