--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
         "php": ">=7.0.0",
         "leafo/lessphp": ">=0.5.0",
         "leafo/scssphp": ">=0.7.5",
-        "matthiasmullie/minify": ">=1.3.59",
-        "reb/babel": ">=1.0.0"
+        "matthiasmullie/minify": ">=1.3.59"
     },
     "autoload": {
         "psr-4": {"WebCollector\\": "src/WebCollector"}
